--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -29,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_14"
             android:layout_marginBottom="@dimen/margin_14"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="1dp">
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_item_background"
@@ -45,6 +45,7 @@
                     android:layout_height="@dimen/margin_14"
                     android:layout_marginStart="@dimen/margin_8"
                     android:src="@drawable/ic_tennis_icon"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/odds_content_container"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/odds_content_container" />
@@ -53,7 +54,7 @@
                     android:id="@+id/odds_content_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_4"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="@dimen/margin_8"
                     android:gravity="bottom"
                     android:orientation="horizontal"
@@ -69,7 +70,7 @@
                         android:maxLines="1"
                         android:textColor="@color/color_BBBBBB_333333"
                         android:textSize="@dimen/textSize14sp"
-                        tools:text="俄罗斯 -0.5/1 ＠ 0.890 (歐洲盤)" />
+                        tools:text="Manchester United FC (Mad)" />
 
                     <TextView
                         android:id="@+id/tvContent"
@@ -78,8 +79,7 @@
                         android:layout_marginStart="8dp"
                         android:maxLines="1"
                         android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize13sp"
-                        android:textStyle="bold"
+                        android:textSize="@dimen/textSize14sp"
                         tools:text="-0.5/2" />
                 </LinearLayout>
 
@@ -87,7 +87,7 @@
                     android:id="@+id/odds_change_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_8"
+                    android:layout_marginEnd="11dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@+id/odds_content_container"
@@ -98,18 +98,18 @@
                         android:id="@+id/tvOdds"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_025BE8"
                         android:textSize="@dimen/margin_14"
                         android:textStyle="bold"
                         tools:text="0.89" />
 
                     <ImageView
                         android:id="@+id/ivOddsArrow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="2dp"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:layout_marginStart="2dp"
                         android:visibility="gone"
-                        tools:src="@drawable/ic_arrow_up"
+                        tools:src="@drawable/selector_odds_arrow_up"
                         tools:visibility="visible" />
                 </LinearLayout>
 
@@ -117,16 +117,18 @@
                     android:id="@+id/tv_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_8"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:layout_marginBottom="@dimen/margin_9"
-                    android:textColor="@color/color_c8c8c8_103861"
-                    android:textSize="@dimen/textSize13sp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="6dp"
+                    android:drawablePadding="8dp"
+                    android:textColor="@color/color_535D76"
+                    android:textSize="@dimen/textSize14sp"
+                    app:drawableStartCompat="@drawable/ic_detail_odd_title_line"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_match"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/odds_content_container"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_match"
-                    tools:text="让球" />
+                    tools:text="让球(1-1) [歐洲盤]" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline"
@@ -142,12 +144,13 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8"
                     android:textSize="@dimen/textSize13sp"
+                    android:layout_marginStart="21dp"
                     app:layout_constraintStart_toStartOf="@+id/ivSportLogo"
                     app:layout_constraintEnd_toEndOf="@+id/guideline"
                     app:layout_constraintBottom_toTopOf="@+id/cl_editText_container"
-                    tools:text="纽卡斯尔 v 切尔西" />
+                    tools:text="Manchester United FC (Mad) vs. SS Lazio(Dasko)" />
 
                 <TextView
                     android:id="@+id/tv_close"
@@ -172,93 +175,102 @@
                     tools:visibility="visible"
                     app:layout_constraintBottom_toTopOf="@id/ll_single_tips">
 
-                    <EditText
-                        android:id="@+id/et_bet"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/et_bet_height"
-                        android:layout_marginEnd="@dimen/margin_6"
-                        android:background="@drawable/bg_radius_2_edittext_unfocus"
-                        android:gravity="end|center_vertical"
-                        android:inputType="numberDecimal"
-                        android:letterSpacing="0.05"
-                        android:maxLength="14"
-                        android:paddingHorizontal="15dp"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize16sp"
-                        android:visibility="visible"
-                        app:layout_constraintEnd_toStartOf="@+id/et_win"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/tv_hint_default"
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline_input"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="12dp"
-                        android:paddingTop="8dp"
-                        android:text="@string/bet_stake"
-                        android:textColor="@color/color_7F7F7F_999999"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.5" />
+
+                    <TextView
+                        android:id="@+id/tv_win"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bet_win"
+                        android:textColor="@color/color_535D76"
                         android:textSize="@dimen/textSize12sp"
-                        android:visibility="visible"
-                        app:layout_constraintStart_toStartOf="@+id/et_bet"
-                        app:layout_constraintTop_toTopOf="@+id/et_bet" />
-
-                    <TextView
-                        android:id="@+id/tv_hint_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="6dp"
-                        android:paddingTop="3dp"
-                        android:text="@string/bet_stake"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize10sp"
-                        android:visibility="gone"
-                        app:layout_constraintStart_toStartOf="@+id/et_bet"
-                        app:layout_constraintTop_toTopOf="@+id/et_bet" />
+                        app:layout_constraintBottom_toBottomOf="@+id/et_win"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/et_win" />
 
                     <EditText
                         android:id="@+id/et_win"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/et_bet_height"
+                        android:layout_marginHorizontal="5dp"
                         android:background="@drawable/bg_radius_2_edittext_unfocus"
                         android:gravity="end|center_vertical"
                         android:inputType="numberDecimal"
                         android:letterSpacing="0.05"
                         android:maxLength="14"
-                        android:paddingHorizontal="15dp"
+                        android:paddingHorizontal="10dp"
                         android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize16sp"
+                        android:textSize="@dimen/textSize12sp"
+                        android:textStyle="bold"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@id/et_bet"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/et_bet"
+                        app:layout_constraintEnd_toEndOf="@+id/guideline_input"
+                        app:layout_constraintStart_toEndOf="@+id/tv_win"
                         app:layout_constraintTop_toTopOf="@+id/et_bet" />
 
                     <TextView
                         android:id="@+id/tv_win_hint_default"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="12dp"
-                        android:paddingTop="8dp"
-                        android:text="@string/bet_win"
+                        android:paddingHorizontal="10dp"
                         android:textColor="@color/color_7F7F7F_999999"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="visible"
-                        app:layout_constraintStart_toStartOf="@+id/et_win"
-                        app:layout_constraintTop_toTopOf="@+id/et_win" />
+                        app:layout_constraintBottom_toBottomOf="@+id/et_win"
+                        app:layout_constraintEnd_toEndOf="@+id/et_win"
+                        app:layout_constraintTop_toTopOf="@+id/et_win"
+                        tools:text="@string/hint_bet_limit_range" />
+
 
                     <TextView
-                        android:id="@+id/tv_win_hint_amount"
+                        android:id="@+id/tv_bet"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="6dp"
-                        android:paddingTop="3dp"
-                        android:text="@string/bet_win"
+                        android:layout_marginStart="5dp"
+                        android:text="@string/bet_info_list_bet"
+                        android:textColor="@color/color_535D76"
+                        android:textSize="@dimen/textSize12sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/et_bet"
+                        app:layout_constraintStart_toStartOf="@+id/guideline_input"
+                        app:layout_constraintTop_toTopOf="@+id/et_bet" />
+
+                    <EditText
+                        android:id="@+id/et_bet"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/et_bet_height"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginStart="5dp"
+                        android:background="@drawable/bg_radius_2_edittext_unfocus"
+                        android:gravity="end|center_vertical"
+                        android:inputType="numberDecimal"
+                        android:letterSpacing="0.05"
+                        android:maxLength="14"
+                        android:paddingHorizontal="10dp"
                         android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize10sp"
-                        android:visibility="gone"
-                        app:layout_constraintStart_toStartOf="@+id/et_win"
-                        app:layout_constraintTop_toTopOf="@+id/et_win" />
+                        android:textSize="@dimen/textSize12sp"
+                        android:textStyle="bold"
+                        android:visibility="visible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/tv_bet"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_hint_default"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/color_7F7F7F_999999"
+                        android:textSize="@dimen/textSize12sp"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="@+id/et_bet"
+                        app:layout_constraintEnd_toEndOf="@+id/et_bet"
+                        app:layout_constraintTop_toTopOf="@+id/et_bet"
+                        tools:text="@string/hint_bet_limit_range" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -347,11 +359,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_8"
+                        android:gravity="end"
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/bet_info_bet_balance_insufficient"
                         android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
+                        android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
@@ -360,11 +373,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_8"
+                        android:gravity="end"
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/bet_info_list_minimum_limit_amount"
                         android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
+                        android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
@@ -373,11 +387,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_8"
+                        android:gravity="end"
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/please_enter_correct_amount"
                         android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
+                        android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
