--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -375,6 +375,10 @@
     <color name="color_D3DEF5">#D3DEF5</color>
     <color name="color_8071ADFF">#8071ADFF</color>
     <color name="color_801971FD">#801971FD</color>
+    <color name="color_F2F9FF">#F2F9FF</color>
+    <color name="color_996A7797">#996A7797</color>
+    <color name="color_33FFAB2E">#33FFAB2E</color>
+    <color name="color_E38902">#E38902</color>
 
 
     <color name="color_E8EFFD">#E8EFFD</color>
