--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -36,8 +36,16 @@
                 android:id="@+id/cl_item_background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/color_202020_fcfcfc"
+                android:background="@drawable/bg_square_shape_8dp_blue_stroke_white_solid"
                 app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:id="@+id/topContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@drawable/bg_shape_top_8dp_blue_stroke_no_bottom_stroke"
+                    app:layout_constraintBottom_toBottomOf="@+id/odds_content_container"
+                    app:layout_constraintTop_toTopOf="@+id/odds_content_container" />
 
                 <ImageView
                     android:id="@+id/ivSportLogo"
@@ -55,7 +63,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="@dimen/margin_8"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="6dp"
                     android:gravity="bottom"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toStartOf="@+id/odds_change_container"
@@ -68,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_414655"
                         android:textSize="@dimen/textSize14sp"
                         tools:text="Manchester United FC (Mad)" />
 
@@ -78,7 +87,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:maxLines="1"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_414655"
                         android:textSize="@dimen/textSize14sp"
                         tools:text="-0.5/2" />
                 </LinearLayout>
@@ -101,7 +110,7 @@
                         android:textColor="@color/color_025BE8"
                         android:textSize="@dimen/margin_14"
                         android:textStyle="bold"
-                        tools:text="0.89" />
+                        tools:text="\@ 0.89" />
 
                     <ImageView
                         android:id="@+id/ivOddsArrow"
@@ -147,10 +156,38 @@
                     android:textColor="@color/color_6C7BA8"
                     android:textSize="@dimen/textSize13sp"
                     android:layout_marginStart="21dp"
-                    app:layout_constraintStart_toStartOf="@+id/ivSportLogo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/guideline"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_league_name"
+                    tools:text="Manchester United FC (Mad) vs. SS Lazio(Dasko)" />
+
+                <TextView
+                    android:id="@+id/tv_league_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:textColor="@color/color_6C7BA8"
+                    android:textSize="@dimen/textSize13sp"
+                    android:layout_marginStart="21dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/guideline"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_start_time"
+                    tools:text="GT 联赛 - 12分钟赛事" />
+
+                <TextView
+                    android:id="@+id/tv_start_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:textColor="@color/color_6C7BA8"
+                    android:textSize="@dimen/textSize13sp"
+                    android:layout_marginStart="21dp"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/guideline"
                     app:layout_constraintBottom_toTopOf="@+id/cl_editText_container"
-                    tools:text="Manchester United FC (Mad) vs. SS Lazio(Dasko)" />
+                    tools:text="2022-08-05 15:30:00" />
 
                 <TextView
                     android:id="@+id/tv_close"
@@ -163,7 +200,7 @@
                     android:text="@string/delete_bet"
                     android:textColor="@color/color_939393_666666"
                     android:textSize="@dimen/textSize10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_match"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -316,15 +353,16 @@
                         android:id="@+id/tv_no_parlay"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/bet_info_hint_view_height"
-                        android:background="@color/color_FFDCA8_FFF3E1"
-                        android:drawablePadding="@dimen/margin_10"
+                        android:background="@color/color_33FFAB2E"
+                        android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
-                        android:paddingHorizontal="@dimen/margin_15"
+                        android:paddingHorizontal="@dimen/margin_10"
                         android:text="@string/bet_info_no_parlay_hint"
-                        android:textColor="@color/color_B95700_D26300"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_E38902"
+                        android:textSize="@dimen/textSize14sp"
                         android:visibility="gone"
-                        app:drawableStartCompat="@drawable/ic_odds_change_tip_v2"
+                        app:drawableStartCompat="@drawable/ic_bet_lock_tip"
+                        app:drawableTint="@color/color_E38902"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="gone" />
 
@@ -332,15 +370,15 @@
                         android:id="@+id/tv_bet_lock"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/bet_info_hint_view_height"
-                        android:background="@color/color_303030_d2d2d2"
-                        android:drawablePadding="@dimen/margin_10"
+                        android:background="@color/color_996A7797"
+                        android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
-                        android:paddingHorizontal="@dimen/margin_15"
+                        android:paddingHorizontal="@dimen/margin_10"
                         android:text="@string/bet_info_bet_lock_hint"
-                        android:textColor="@color/color_939393_666666"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_F9F9F9"
+                        android:textSize="@dimen/textSize14sp"
                         android:visibility="gone"
-                        app:drawableStartCompat="@drawable/ic_bet_lock_tip_v2"
+                        app:drawableStartCompat="@drawable/ic_bet_lock_tip"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible" />
 
