--- a/app/src/main/res/drawable/bg_radius_2_keyboard_gradient_green.xml
+++ b/app/src/main/res/drawable/bg_radius_2_keyboard_gradient_green.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/keyboard_radius" />
-
+    <corners android:radius="2dp" />
     <gradient
         android:angle="270"
-        android:startColor="@color/color_FDFBFA"
-        android:endColor="@color/color_EDEEF5"
+        android:startColor="@color/color_46D980"
+        android:endColor="@color/color_32BE8C"
         android:type="linear" />
 </shape>
