[feature] 1. 調整注單輸入框和刪除按鈕背景UI  2. 統一item間距  3. 限額提示只有輸入金額才會隱藏

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -195,11 +195,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_8"
                     android:background="@drawable/bg_delete_button"
-                    android:paddingHorizontal="4dp"
-                    android:paddingVertical="2dp"
+                    android:paddingHorizontal="7dp"
+                    android:paddingVertical="1dp"
                     android:text="@string/delete_bet"
-                    android:textColor="@color/color_939393_666666"
-                    android:textSize="@dimen/textSize10sp"
+                    android:textColor="@color/color_535D76"
+                    android:textSize="@dimen/textSize12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -255,7 +255,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_7F7F7F_999999"
+                        android:textColor="@color/color_C9CFD7"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/et_win"
@@ -301,7 +301,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_7F7F7F_999999"
+                        android:textColor="@color/color_C9CFD7"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/et_bet"
