--- a/app/src/main/res/drawable/bg_delete_button.xml
+++ b/app/src/main/res/drawable/bg_delete_button.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp" />
-
-    <solid android:color="@color/color_2E2E2E_EBEBEB" />
+    <corners android:radius="2dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/color_0D838383" />
+    <solid android:color="@color/color_EAEAEA" />
 </shape>
