--- a/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    <item>-->
+
+<!--        <shape android:shape="rectangle">-->
+<!--            <corners android:radius="4dp" />-->
+<!--            <solid android:color="@color/color_DAEAFF" />-->
+<!--        </shape>-->
+<!--    </item>-->
+
     <item>
+<!--        android:bottom="2dp"-->
+<!--        android:left="2dp"-->
+<!--        android:right="2dp"-->
+<!--        android:top="2dp">-->
 
         <shape android:shape="rectangle">
-            <corners android:radius="2dp" />
-            <solid android:color="@color/color_DAEAFF" />
-        </shape>
-    </item>
-
-    <item
-        android:bottom="2dp"
-        android:left="2dp"
-        android:right="2dp"
-        android:top="2dp">
-
-        <shape android:shape="rectangle">
-            <corners android:radius="2dp" />
+            <corners android:radius="4dp" />
             <stroke
                 android:width="1dp"
                 android:color="@color/color_6BABFF" />
-            <solid android:color="@color/color_FCFCFC" />
+            <solid android:color="@color/color_FFFFFF" />
         </shape>
     </item>
 </layer-list>
