--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -403,6 +403,8 @@
     <color name="color_99FFFFFF">#99FFFFFF</color>
     <color name="color_80000000">#80000000</color>
     <color name="color_DFE8F2">#DFE8F2</color>
+    <color name="color_0D838383">#0D838383</color>
+    <color name="color_EAEAEA">#EAEAEA</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
